--- a/src/App.css
+++ b/src/App.css
@@ -46,9 +46,10 @@ header h1 {
   justify-content: center;
   align-items: center;
 }
-display-flex, .display-flex {
+display-flex,
+.display-flex {
   display: flex;
-  display: -webkit-flex; 
+  display: -webkit-flex;
 }
 
 a:focus,
