--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
 header {
   margin: 5px;
   padding: 30px 0 30px 0;
-  background-image: url(images/library.jpg);
+  background-image: url(./library.jpg);
   opacity: 90%;
   color: #fff;
   text-align: center;
